# template-entity-checker

./: .gitignore  AGENTS.md  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: tests.yml  validate.yml
custom_components/template_entity_checker/: __init__.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  models.py  notifications.py  parser.py  sensor.py  services.yaml  strings.json  template_sources.py
custom_components/template_entity_checker/translations/: de.json  en.json
scripts/: check_legacy_references.py
tests/: conftest.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_integration_setup.py  test_notifications.py  test_parser.py  test_sensor.py  test_template_sources.py
